fix issue in small screen sizes with tabs not fitting on window

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -120,8 +120,17 @@ hr
 .nav-tabs
     display: flex
     justify-content: center
+    font-family: $orbitron
+    text-align: center
+    li a
+        padding-left: 5px
+        padding-right: 5px
     li.active a
         height: 100%
+    li.active a, li.active a:focus, li.active a:hover
+        background-color: $darksteam
+        color: white
+        
 
 .plat-tab
     width: 100%
